# django-pg-ultrasearch

./: .gitignore  AGENTS.md  LICENSE  README.md  Taskfile.yml  agents.toml  prek.toml  pyproject.toml
.github/workflows/: ci.yml
docs/: AGENTS.md  reference-projects.md
docs/agent-notes/: 2026-04-08 DSI Workflow Adoption And Notes Migration.md  AGENTS.md
docs/dsi/: AGENTS.md
docs/dsi/2026-04-08-dsi-workflow-adoption/: desire.md
docs/dsi/2026-04-08-dsi-workflow-adoption/implementations/: initial.md
docs/dsi/2026-04-08-dsi-workflow-adoption/plans/: initial.md
docs/dsi/2026-04-08-dsi-workflow-adoption/specs/: initial.md
docs/research/pg-textsearch/: 01-product-docs.md  02-postgresql-news-release.md  03-tigerdata-blog-design-benchmarks.md  04-reddit-postgresql-thread.md  05-hacker-news-thread.md  06-timescale-docs-source-file.md  07-pg-textsearch-repo.md  README.md
src/django_pg_ultrasearch/: __init__.py  apps.py
tests/: settings.py  test_app_config.py
