[build-system]
build-backend = "uv_build"
requires = [ "uv-build>=0.11.3,<0.12" ]

[project]
name = "django-pg-ultrasearch"
version = "0.1.0"
description = "PostgreSQL-first search primitives for reusable Django apps."
readme = "README.md"
keywords = [
  "django",
  "full-text-search",
  "postgresql",
  "search",
  "trigram",
]
license = "BSD-3-Clause"
license-files = [ "LICENSE" ]
authors = [
  { name = "Micah Lyle", email = "10660805+MicahLyle@users.noreply.github.com" },
]
requires-python = ">=3.13"
classifiers = [
  "Development Status :: 2 - Pre-Alpha",
  "Environment :: Web Environment",
  "Framework :: Django",
  "Framework :: Django :: 5.2",
  "Framework :: Django :: 6.0",
  "Intended Audience :: Developers",
  "Operating System :: OS Independent",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Topic :: Internet :: WWW/HTTP",
  "Topic :: Internet :: WWW/HTTP :: Dynamic Content",
  "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
  "django>=5.2",
]
urls.Homepage = "https://github.com/elyon-tech/django-pg-ultrasearch"
urls.Issues = "https://github.com/elyon-tech/django-pg-ultrasearch/issues"
urls.Repository = "https://github.com/elyon-tech/django-pg-ultrasearch"

[dependency-groups]
dev = [
  "prek>=0.2.30",
  "psycopg[binary]>=3.2.12",
  "pytest>=9.0.3",
  "pytest-django>=4.12",
  "ruff>=0.15.9",
]

[tool.uv]
build-backend.source-include = [ "tests/**" ]

[tool.ruff]
target-version = "py313"
src = [ "src", "tests" ]
format.docstring-code-format = true
lint.select = [ "B", "E", "F", "I", "UP" ]

[tool.pytest]
ini_options.DJANGO_SETTINGS_MODULE = "tests.settings"
ini_options.addopts = [ "--strict-config", "--strict-markers" ]
ini_options.pythonpath = [ "." ]
ini_options.testpaths = [ "tests" ]
